# quantumai2

./: QAI2.ipynb  QAI2_BBG_window.ipynb  QAI2_StockTrading.ipynb  QAI2_v2_multiReward.ipynb  QAI2_v2_multiReward_BBG.ipynb  SPX_2.csv  StockTrading_AV.ipynb  bbg_download.csv  bbg_download2.csv  bbg_trial.ipynb  checkpoint.pkl  checkpoint_bbg.pkl  eco_trial.csv  eod_long.csv  eod_trial.csv  pyproject.toml  req.txt  requirements.txt  setup.py  spx_df_since_1980.csv  spx_df_since_1980.pkl  spx_df_since_1980_OHVL.pkl  wandb_env.py  wandb_multiReward.ipynb
carsten/: carsten_test_ticker.csv  carsten_tics.csv  vol_stocks.csv
config/: tickers.py
configs/: config.py  tickers.py
env/: env_stocktrading_simple.py  flo_portfolio.py  portfolio_bbg.py  portfolio_bbg_v2.py  portfolio_bbg_window.py  portfolio_multi_reward.py  stock_trading.py  stock_trading_v2.py  tradingclass_rd_google.py  tradingclass_rd_google2.py
hyperoptimizer/: optunaoptimizer.py
models/: callbacks.py  drl_agent.py  models.py
plot/: plot.py
preprocessors/: bbg.py  preprocessors.py
tensorboard/a2c_florian/A2C_1/: events.out.tfevents.1690982822.Florians-MacBook-Pro.local.74479.0  events.out.tfevents.1691690554.Florians-MacBook-Pro.local.88510.0
tensorboard/a2c_florian/A2C_10/: events.out.tfevents.1691872054.Florians-MacBook-Pro.local.62460.0
tensorboard/a2c_florian/A2C_11/: events.out.tfevents.1691872315.Florians-MacBook-Pro.local.62950.0
tensorboard/a2c_florian/A2C_12/: events.out.tfevents.1691872426.Florians-MacBook-Pro.local.63136.0
tensorboard/a2c_florian/A2C_13/: events.out.tfevents.1691872621.Florians-MacBook-Pro.local.63409.0
tensorboard/a2c_florian/A2C_14/: events.out.tfevents.1691872737.Florians-MacBook-Pro.local.63607.0
tensorboard/a2c_florian/A2C_15/: events.out.tfevents.1691872887.Florians-MacBook-Pro.local.63791.0
tensorboard/a2c_florian/A2C_16/: events.out.tfevents.1691873385.Florians-MacBook-Pro.local.64546.0
tensorboard/a2c_florian/A2C_17/: events.out.tfevents.1691873510.Florians-MacBook-Pro.local.64546.1
tensorboard/a2c_florian/A2C_18/: events.out.tfevents.1691873796.Florians-MacBook-Pro.local.65133.0
tensorboard/a2c_florian/A2C_19/: events.out.tfevents.1691873985.Florians-MacBook-Pro.local.65421.0
tensorboard/a2c_florian/A2C_2/: events.out.tfevents.1690984044.Florians-MacBook-Pro.local.74479.1  events.out.tfevents.1691691893.Florians-MacBook-Pro.local.93032.0
tensorboard/a2c_florian/A2C_20/: events.out.tfevents.1691874049.Florians-MacBook-Pro.local.65619.0
tensorboard/a2c_florian/A2C_21/: events.out.tfevents.1691874937.Florians-MacBook-Pro.local.66920.0
tensorboard/a2c_florian/A2C_22/: events.out.tfevents.1691875041.Florians-MacBook-Pro.local.67121.0
wandb/: latest-run
wandb/run-20230808_104405-7f5ijpuq/: run-7f5ijpuq.wandb
wandb/run-20230808_104421-9ksq23e3/: run-9ksq23e3.wandb
wandb/run-20230808_104432-sppiyo4s/: run-sppiyo4s.wandb
wandb/sweep-xbd7lgfr/: config-7f5ijpuq.yaml  config-9ksq23e3.yaml  config-sppiyo4s.yaml
(+247 files in other folders)
