[tool.poetry]
name = "quantumai2"
version = "0.1"

description = "tbd"
authors = ["tbd"]
license = "MIT"


classifiers=[
        # Trove classifiers
        # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
    ]

[tool.poetry.urls]
github = "https://github.com/sobiodum/quantumai2.git"

[tool.poetry.dependencies]
gymnasium ="^0.28.1"
numpy ="^1.25.0"
stable-baselines3 ="^2.0.0"
pandas ="^2.0.3"
optuna ="^3.2.0"
joblib ="^1.3.1"
pyfolio ="^0.9.2"
matplotlib ="^3.7.1"
yfinance ="^0.2.22"
pdblp ="^0.1.8"

[tool.poetry.group.dev.dependencies]
black = "^23"
isort = "^5"
jupyter = "^1"
mypy = "^1"
pandas-stubs = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
