[tool.poetry]
name = "quantumai2"
version = "0.1.0"
description = "tbd"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.0"
numpy = "^1.25.2"
stable-baselines3 = "^2.0.0"
pandas = "^2.0.3"
optuna = "^3.2.0"
optuna-dashboard = "^0.10.3"
joblib = "^1.3.1"
pyfolio = "^0.9.2"
matplot = "^0.1.9"
yfinance = "^0.2.26"
pdblp = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
